// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`pluginLESS minified: true 1`] = `
[
  "./input.test.js",
]
`;

exports[`pluginLESS minified: true 2`] = `
"// libraries/bun-plugins/source/test/input.test.less
var style = document.createElement("style");
style.dataset.path = "libraries/bun-plugins/source/test/input.test.less";
style.textContent = ".parent>.child{background-color:rgba(51,51,51,0.8);padding:16px}";
document.head.appendChild(style);
"
`;

exports[`pluginLESS minified: false 1`] = `
[
  "./input.test.js",
]
`;

exports[`pluginLESS minified: false 2`] = `
"// libraries/bun-plugins/source/test/input.test.less
var style = document.createElement("style");
style.dataset.path = "libraries/bun-plugins/source/test/input.test.less";
style.textContent = \`.parent > .child {
  background-color: rgba(51, 51, 51, 0.8);
  padding: 16px;
}
\`;
document.head.appendChild(style);
"
`;
